# 02476-ML-Ops

./: .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  config_cpu.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  train.py
.dvc/: config
.github/workflows/: tests.yml
FishEye/: __init__.py  predict_model.py  train_model.py
FishEye/data/: data_module.py  make_dataset.py
FishEye/models/: model.py
conf/: config.yaml
config/: config.yaml
dockerfiles/: app.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: data_exploration.ipynb  datadrift.ipynb  profiling.ipynb
reports/: README.md
tests/: test_data.py  test_model.py  test_train.py
webapp/: api.py
webapp/static/: index.html  script.js  style.css
